# type_reflect

./: .gitignore  Cargo.toml  README.md  publish.sh
admin/project/: README.md
admin/project/completed/: add_typescript_validation_generation.md  basic_requirements.md  move_ts_str_macro_to_separate_crate.md  mutli_emitter_destinations.md  polish_publication.md  proper_rename.md  serde_attributes.md  serde_enum_tuples.md  simple_enums.md  support_testing.md
admin/project/in_progress/: add_typescript_validation_generation.md  move_ts_str_macro_to_separate_crate.md  polish_publication.md  support_testing.md  support_transparent_types.md  support_tuple_structs.md  support_type_generator_state.md  suppport_typia.md
admin/project/planning/: end_to_end_testing.md  move_ts_str_macro_to_separate_crate.md  remove_tag_requirement.md  support_aliases.md  support_arbitrary_attributes.md  support_custom_derives.md  tuple_structs.md
example/: Cargo.toml
example/output/: package-lock.json  package.json  rust.rs  zod.ts
example/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  utils.rs
macros/src/export_types_impl/: destination.rs  mod.rs
macros/src/type_def/: enum_def.rs  mod.rs  struct_def.rs  syn_type_utils.rs  type_alias_def.rs  type_utils.rs
ts_quote/: Cargo.toml  README.md
ts_quote/src/: lib.rs  parsing.rs
ts_quote_macros/: Cargo.toml  README.md
ts_quote_macros/src/: lib.rs  parsing.rs  ts_quote.rs  ts_string.rs
type_reflect/: Cargo.toml  README.md
type_reflect/examples/: declare_and_export.rs
type_reflect/examples/declare_and_export/: declare_and_export.rs
type_reflect/examples/declare_and_export/output/: zod.ts
type_reflect/src/: alias_type.rs  enum_type.rs  lib.rs  rust.rs  struct_type.rs  ts_format.rs  zod.rs
type_reflect/src/ts_validation/: mod.rs  struct_type.rs
type_reflect/src/ts_validation/enum_type/: case_type.rs  complex.rs  mod.rs
type_reflect/src/ts_validation/validation/: array.rs  map.rs  mod.rs  primitive.rs  tuple.rs  type_validation.rs
type_reflect/src/type_script/: alias_type.rs  enum_type.rs  mod.rs  struct_type.rs  type_fields.rs
type_reflect/src/zod/: alias_type.rs  enum_type.rs  mod.rs  struct_type.rs
type_reflect/tests/: .gitignore  common.rs  test1.rs  test_adt.rs  test_array.rs  test_boxed.rs  test_map.rs  test_nested.rs  test_optional.rs  test_simple_enum.rs  test_simple_struct.rs  test_struct_types.rs  test_ts_quote.rs  test_ts_str.rs  test_ts_string.rs
type_reflect/tests/output/: jest.config.js  package.json  tsconfig.json
type_reflect_core/: Cargo.toml  README.md
type_reflect_core/src/: inflection.rs  lib.rs  type_description.rs
type_reflect_macros/: Cargo.toml  README.md
type_reflect_macros/src/: attribute_utils.rs  lib.rs
type_reflect_macros/src/export_types_impl/: destination.rs  mod.rs
type_reflect_macros/src/type_def/: enum_def.rs  mod.rs  struct_def.rs  syn_type_utils.rs  type_alias_def.rs  type_utils.rs
