[package]
name = "ts_quote"
version = "0.2.0"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2021"
description = "Procedural macros for quasi-quoting TypeScript from Rust"
license = "Apache-2.0"

repository = "https://github.com/spencerkohan/type_reflect/tree/main/ts_quote"
documentation = "https://docs.rs/ts_quote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts_quote_macros = "0.1.2"
deno_ast = "0.31.6"
dprint-plugin-typescript = "0.88.3"
anyhow = "1.0.75"
