[package]
name = "type_reflect"
version = "0.5.0"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2021"
description = "Extensible runtime reflection through a Derive macro"
license = "Apache-2.0"

repository = "https://github.com/spencerkohan/type_reflect/tree/main/type_reflect"
documentation = "https://docs.rs/type_reflect"

[dependencies]
type_reflect_macros = "0.4.1"
ts_quote = "0.4.0"
type_reflect_core = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dprint-plugin-typescript = "0.88.3"

[dev-dependencies]
anyhow = "1.0.75"

[[example]]
name = "declare_and_export"
path = "examples/declare_and_export/declare_and_export.rs"
