[package]
name = "type_reflect_core"
version = "0.1.2"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2021"
description = "Utility functions for type_reflect"
license = "Apache-2.0"

repository = "https://github.com/spencerkohan/type_reflect/tree/main/type_reflect_core"
documentation = "https://docs.rs/type_reflect_core"

[dependencies]
proc-macro2 = "1.0.69"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
Inflector = { version = "0.11", default-features = false }
