[package]
name = "type_reflect_macros"
version = "0.1.0"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2021"
description = "derive macro for type_reflect"
license = "MIT"

# [features]
# serde-compat = ["termcolor"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
Inflector = { version = "0.11", default-features = false }
type_reflect_core = "0.1.0"
# termcolor = { version = "1", optional = true }
