[package]
name = "type_reflect_macros"
version = "0.4.1"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
edition = "2021"
description = "derive macro for type_reflect"
license = "MIT"

repository = "https://github.com/spencerkohan/type_reflect/tree/main/type_reflect_macros"
documentation = "https://docs.rs/type_reflect_macros"

[lib]
proc-macro = true

[dependencies]
type_reflect_core = "0.4.0"
proc-macro2 = "1.0.69"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
Inflector = { version = "0.11", default-features = false }
